[project]
name = "dualga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
